string removed from contract

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -54,7 +54,7 @@
         <div >
           <label for="airportName">Name</label>
           <select  id='airport_list'></select>
-          <input  class="form-control" id="airportName" aria-describedby="emailHelp" placeholder="Enter Airport Name" value="">
+          <!-- <input  class="form-control" id="airportName" aria-describedby="emailHelp" placeholder="Enter Airport Name" value=""> -->
         </div>
        <div >
           <label for="pricePerBag">Price Per Bag</label>
